--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,69 +4,65 @@ main_localized:
       url: /rooms/
     - title: Offers
       url: /offers/
+    - title: Amenities
+      url: /amenities/
     - title: Cafe Lounge
       url: /cafe-lounge/
     - title: Location
       url: /location/
-    - title: Amenities
-      url: /amenities/
-    - title: Blog
-      url: /blog/
     - title: Gallery
       url: /gallery/
-    - title: Contact
-      url: /contact/
+    - title: Faq
+      url: /faq/
   ja:
     - title: 客室
       url: /ja/rooms/
-    - title: Offers
+    - title: キャンペーン
       url: /ja/offers/
-    - title: Cafe Lounge
+    - title: アメニティー
+      url: /ja/amenities/
+    - title: ラウンジ
       url: /ja/cafe-lounge/
     - title: ロケーション
       url: /ja/location/
-    - title: Amenities
-      url: /ja/amenities/
-    - title: ブログ
-      url: /ja/blog/
     - title: ギャラリー
       url: /ja/gallery/
-    - title: お問い合わせ
-      url: /ja/contact/      
+    - title: よくあるご質問
+      url: /ja/faq/
 
 footer_left_localized:
   en:
     - title: Rooms
       url: /rooms/
-    - title: Amenities
-      url: /amenities/
     - title: Offers
       url: /offers/
-    - title: Gallery
-      url: /gallery/
+    - title: Amenities
+      url: /amenities/
     - title: Cafe Lounge
       url: /cafe-lounge/
-    - title: Blog
-      url: /blog/
     - title: Location
       url: /location/
+    - title: Gallery
+      url: /gallery/
+    - title: Blog
+      url: /blog/
     - title: FAQ
       url: /faq/
   ja:
     - title: 客室
       url: /ja/rooms/
-    - title: Amenities
-      url: /ja/amenities/
-    - title: Offers
+    - title: キャンペーン
       url: /ja/offers/
-    - title: ギャラリー
-      url: /ja/gallery/
-    - title: Cafe Lounge
+    - title: アメニティー
+      url: /ja/amenities/
+    - title: ラウンジ
       url: /ja/cafe-lounge/
-    - title: ブログ
-      url: /ja/blog/
     - title: ロケーション
       url: /ja/location/
+    - title: ギャラリー
+      url: /ja/gallery/
+    - title: ブログ
+      url: /ja/blog/
     - title: よくあるご質問
       url: /ja/faq/
 footer_right_localized:
